syntax = "proto3";

package def.match.message;

option java_package = "com.commelina.math24.play.match.proto";
option java_outer_classname = "RoomProtos";
option java_multiple_files = true;

message TemporaryRoomPrepare {

}

message TemporaryRoomDissolve {
    uint64 roomId = 1;
    repeated uint64 userIds = 2;
}

message JoinTemporaryRoom {
    uint64 userId = 1;
}